--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   publish = "dist/my-store-api"
   command = "ng build"
 [[redirects]]
-  from "/*"
-  to "/index.html"
+  from = "/*"
+  to = "/index.html"
   status = 200
